[metadata]
name = antares_broker_bot
version = 0.0.1
author = Konstantin Malanchev
author_email = hombit@gmail.com
description = Telegram bot showing Antares ZTF/LSST broker alerts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hombit/antares_broker_bot
license = MIT
keywords = science, astrophysics
classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
include_package_data = True
install_requires =
        aiogram~=2.14
        aioprocessing~=2.0
        antares-client~=1.2
        asyncpg~=0.24
        cchardet
        prettytable~=2.2
        sqlalchemy[asyncio]~=1.4
        ujson
        uvloop
